--- a/css/pc.css
+++ b/css/pc.css
@@ -148,7 +148,6 @@ hr {
   transition: 1s;
 }
 .btn:hover {
-  color: var(--color-default);
   background: #fff;
   box-shadow: rgba(255, 255, 255, 0.4) 0px 3px 10px, rgba(255, 255, 255, 0.3) -5px 5px;
   color: black !important;
@@ -205,7 +204,7 @@ hr {
 .carousel-inner {
   height: max-content;
   padding-top: 5%;
-  height: 100%;
+  padding-bottom: 5%;
 }
 .dsc-flex-container {
   display: flex;
