--- a/css/pc.css
+++ b/css/pc.css
@@ -14,6 +14,7 @@ body {
 }
 
 :root {
+  --hr-color: linear-gradient(90deg, rgba(255, 255, 255, 0.1) 0%, rgb(0, 0, 0) 35%, rgba(255, 255, 255, 0.1) 100%);
   --svg-shadow: drop-shadow(0px 0px 10px rgb(0, 0, 0, 0.5));
   --container-background: white;
   --color-default-ch1: white;
@@ -27,6 +28,7 @@ body {
   --dsc-hover: drop-shadow(10px 10px 20px rgba(0, 0, 0, 0.418));
 }
 .dark-mode {
+  --hr-color: linear-gradient(90deg, rgba(255, 255, 255, 0.1) 0%, white 35%, rgba(255, 255, 255, 0.1) 100%);
   --svg-shadow: drop-shadow(0px 0px 10px rgba(255, 255, 255, 0.5));
   --container-background: rgb(12, 12, 12);
   --color-default: white;
@@ -97,7 +99,7 @@ i {
   font-size: calc(2vw + 8rem) !important;
 }
 hr {
-  background: linear-gradient(90deg, rgba(255, 255, 255, 0.1) 0%, white 35%, rgba(255, 255, 255, 0.1) 100%);
+  background: var(--hr-color);
   height: 1rem;
 }
 .card-title-special {
