optimization for lower res
If someone scale browser window he will not be scared

--- a/css/pc.css
+++ b/css/pc.css
@@ -478,6 +478,9 @@ a.bettertouch:before {
   .img {
     display: none;
   }
+  .mayhide {
+    display: none;
+  }
 }
 .anim {
   animation: img-anim 2s forwards;
