--- a/css/mobile.css
+++ b/css/mobile.css
@@ -167,7 +167,7 @@ a.bettertouch:before {
 }
 .h3 {
   opacity: 0;
-  color: #9b9b9b;
+
   font-size: 1.5rem;
 }
 .h3.visible {
@@ -251,9 +251,9 @@ h5 {
 }
 .card {
   background-color: #1d1d1d;
-  border-color: #11101d;
+  border-color: #ffffff;
   color: white;
-  opacity: 0;
+  opacity: 1;
   border-radius: 1rem;
   transition: 0.3s transform cubic-bezier(0.155, 1.105, 0.295, 1.12), 0.3s box-shadow, 0.3s -webkit-transform cubic-bezier(0.155, 1.105, 0.295, 1.12);
   -webkit-box-shadow: 4px 4px 6px -1px rgba(17, 16, 29, 0.3);
@@ -262,12 +262,7 @@ h5 {
   backface-visibility: hidden;
   -webkit-font-smoothing: subpixel-antialiased;
 }
-.card-special {
-  width: 100rem;
-  margin: 0 auto;
-  float: none;
-  margin-bottom: 10px;
-}
+
 .card:hover {
   transform: scale(1.03);
 }
@@ -347,6 +342,16 @@ h5 {
   width: 90%;
   position: relative;
   bottom: 0;
+}
+.progress-bar-sub {
+  text-align: center;
+  -webkit-backface-visibility: hidden;
+  backface-visibility: hidden;
+  display: block;
+  width: 90%;
+  position: relative;
+  bottom: 0;
+  background-color: orange;
 }
 /* main element */
 .main {
@@ -708,8 +713,8 @@ svg.svg-animated {
   }
 }
 .carousel-item.active {
-  opacity: 1;
   transition: all 0.5s;
+  opacity: 1;
 }
 .card-slider {
   background-color: #1d1d1d;
