--- a/css/mobile.css
+++ b/css/mobile.css
@@ -251,8 +251,8 @@ a.bettertouch:before {
   font-size: 1rem;
 }
 .h3 {
+  padding-top: 1rem;
   opacity: 0;
-
   font-size: 1.5rem;
 }
 .h3.visible {
