--- a/css/pc.css
+++ b/css/pc.css
@@ -1,6 +1,7 @@
 * {
   -webkit-font-smoothing: antialiased;
   -moz-osx-font-smoothing: grayscale;
+  font-family: Verdana, sans-serif;
 }
 body {
   overflow-x: hidden;
