--- a/css/pc.css
+++ b/css/pc.css
@@ -243,7 +243,7 @@ hr {
 .leftcont {
   float: left;
   margin-left: 10%;
-  margin-top: 15%;
+  margin-top: 5%;
 }
 .h1 {
   font-size: 4vw;
@@ -298,7 +298,7 @@ hr {
   opacity: 0;
 }
 .hello_container {
-  height: 100%;
+  min-height: 160%;
   width: 100%;
 }
 .card-slider {
@@ -357,6 +357,13 @@ a.bettertouch:before {
   margin: 0 auto;
   padding-top: 6rem;
   filter: var(--ref-shadow);
+}
+.leftcont > .h1 {
+  font-size: 10rem;
+  background-color: #00000056;
+}
+h2.h1 {
+  font-size: 5em !important;
 }
 .navbar {
   backdrop-filter: blur(10px);
