--- a/css/pc/pc.css
+++ b/css/pc/pc.css
@@ -24,7 +24,8 @@
 .header {
   width: 100%;
   height: 100vh;
-  min-height: 100%;
+  min-height: 100vh;
+
   background: radial-gradient(100.34% 317.12% at 100% 98.43%, #ffffff 0%, #ef9675 100%);
   /* warning: gradient uses a rotation that is not supported by CSS and may not behave as expected */
 }
@@ -49,4 +50,13 @@ h1 {
   justify-content: space-between;
   width: 100%;
   max-width: 80%;
+}
+@media only screen and (max-width: 900px) {
+  .content {
+    padding-left: 2rem;
+    padding-right: 2rem;
+  }
+  .navbar {
+    max-width: 100%;
+  }
 }
