--- a/css/pc/pc.css
+++ b/css/pc/pc.css
@@ -45,6 +45,8 @@
 .card {
   background: black;
   color: white;
+  filter: drop-shadow(1vh 2vh 0 rgba(0, 0, 0, 0.25));
+  border-radius: 1rem;
 }
 div.card-title {
   height: 100%;
@@ -79,6 +81,10 @@ h1 {
   .header-content {
     padding-left: 1rem;
     padding-right: 1rem;
+  }
+
+  .special {
+    position: relative !important;
   }
   .navbar {
     max-width: 100%;
